Fixes #2, resolves #4, fixes #5. Set login profile in Bungee instead of adding properties to avoid NPE. Added modifiers to allow for different data interpretation. Generate random IP when using /spoof player.